# toolregistry-hub

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI_SEARCH_IMPLEMENTATION.md  Makefile  PLAN.md  README.md  README_en.md  README_zh.md  SELECTOR_USAGE.md  filter.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini  readme.md  readme_en.md  readme_zh.md  requirements.txt  run_tests.py  selector_plan.md  test_filesystem.py  test_selector_system.py  tools.jsonc.example  websearch_bing.py  websearch_google.py  zh-mkdocs.yml
.github/workflows/: ci.yml  gh-pages.yml  release.yml  upstream-compat.yml
config/: tools_config.json
docker/: .env.sample  Caddyfile  Dockerfile  Makefile  README_en.md  README_zh.md  compose.dev.yaml  compose.yaml  openwebui-tool-server-migration.md  requirements.txt  tokens.txt.example
docs/: calculator.md  changelog.md  datetime.md  docker.md  ecosystem.md  file_ops.md  filesystem.md  index.md  library.md  mkdocs.yml  navigation.md  other_tools.md  phase6-callback-mechanism-design.md  phase6-mcp-adapter-design.md  readme_en.md  readme_zh.md  server.md  unit_converter.md
docs/dev/: helper_functions.md
docs/en/: calculator.md  datetime.md  docker.md  file_ops.md  filesystem.md  index.md  navigation.md  other_tools.md  server.md
docs/en/websearch/: base_search.md  index.md  legacy.md  search_result.md  tavily.md
docs/examples/: index.md
docs/get-started/: installation.md  quickstart.md
docs/guides/: docker.md  library.md  server.md
docs/javascripts/: mathjax.js
docs/reference/: cli.md  endpoints.md  environment.md  helper_functions.md
docs/stylesheets/: extra.css  toolregistry-hub.css
docs/tools/: bash_tool.md  calculator.md  cron_tool.md  datetime.md  file_ops.md  file_reader.md  file_search.md  filesystem.md  index.md  path_info.md  think_tool.md  todo_list.md  unit_converter.md
docs/tools/websearch/: base_search.md  bing.md  brave.md  brightdata.md  index.md  legacy.md  scrapeless.md  search_result.md  searxng.md  serper.md  tavily.md  web_fetch_tool.md  websearch_unified.md
docs/websearch/: base_search.md  bing.md  index.md  legacy.md  search_result.md  searxng.md
docs/zh/: calculator.md  docker.md  filesystem.md  index.md  navigation.md  other_tools.md  server.md  web_fetch_tool.md
docs/zh/websearch/: bing.md  brave.md  index.md  legacy.md  search_result.md  tavily.md
en/: .readthedocs.yaml  mkdocs.yml
en/docs/: index.md  navigation.md
en/docs/dev/: helper_functions.md
en/docs/tools/: think_tool.md  unit_converter.md  web_fetch_tool.md
en/docs/tools/websearch/: base_search.md  bing.md  brave.md  legacy.md  searxng.md  tavily.md
examples/: gemini_search_example.py
examples/browser_use/: interactive_example.py
plans/: phase6-router-table-design.md
plans/research/: cicada-reference.md  executor-sandbox-architecture.md  sandbox-solutions.md
src/toolregistry/: __init__.py
src/toolregistry_hub/: __init__.py  _scheduler.py  _structlog.py  bash_tool.py  calculator.py  cron_tool.py  datetime_utils.py  fetch.py  file_ops.py  file_reader.py  file_search.py  filesystem.py  path_info.py  think_tool.py  todo_list.py  unified_file_tools.py  unit_converter.py  version_check.py  weather.py
src/toolregistry_hub/_vendor/: httpclient.py  readability.py  scheduler.py  structlog.py  useragent.py  validate.py
src/toolregistry_hub/_vendor/cdp/: __init__.py  cdp.py
src/toolregistry_hub/_vendor/readability/: __init__.py  readability.py
src/toolregistry_hub/browser_use/: README.md  __init__.py  browser_fetch.py
src/toolregistry_hub/data/: tools.yaml
src/toolregistry_hub/exploratory/: README.md  search_result.py  websearch_brave.py  websearch_searxng.py  websearch_tavily.py
src/toolregistry_hub/server/: __init__.py  app.py  auth.py  autoroute.py  cli.py  dynamic_router.py  mcp_adapter.py  registry.py  server_core.py  server_mcp.py  server_openapi.py  tool_config.py
src/toolregistry_hub/utils/: __init__.py  annotation_helpers.py  api_key_parser.py  configurable.py  diff_utility.py  file_parsing.py  filesystem.py  fn_namespace.py  requirements.py
src/toolregistry_hub/websearch/: README_GEMINI.md  __init__.py  base.py  dedup.py  google_parser.py  plan.md  search_result.py  websearch_bing.py  websearch_brave.py  websearch_brightdata.py  websearch_gemini.py  websearch_google_enhanced.py  websearch_google_patchright.py  websearch_google_ultimate.py  websearch_scrapeless.py  websearch_searxng.py  websearch_serper.py  websearch_tavily.py  websearch_unified.py
src/toolregistry_hub/websearch_legacy/: __init__.py  filter.py  websearch.py  websearch_bing.py  websearch_google.py  websearch_searxng.py
tests/: Makefile  README.md  __init__.py  pytest.ini  run_tests.py  test_annotation_helpers.py  test_api_key_parser.py  test_auth_standalone.py  test_autoroute.py  test_bash_tool.py  test_calculator.py  test_cron_tool.py  test_datetime_utils.py  test_fetch.py  test_file_ops.py  test_file_reader.py  test_file_search.py  test_filesystem.py  test_mcp_adapter.py  test_path_info.py  test_registry.py  test_requires_env.py  test_think_tool.py  test_todo_list_llm.py  test_todo_list_objects.py  test_todo_list_status_alias.py  test_tool_config.py  test_unified_file_tools.py  test_unit_converter.py  test_unit_converter_schema.py  test_utils.py  test_version_check.py  test_weather.py
tests/websearch/: API_ANALYSIS.md  DEBUG_GUIDE.md  __init__.py  test_brightdata_engines.py  test_debug_google_apis.py  test_dedup.py  test_serper_integration.py  test_websearch.py  test_websearch_bing.py  test_websearch_brightdata.py  test_websearch_failover.py  test_websearch_gemini.py  test_websearch_google.py  test_websearch_scrapeless.py  test_websearch_searxng.py  test_websearch_serper.py  test_websearch_unified.py
zh/: .readthedocs.yaml  mkdocs.yml
zh/docs/: index.md
zh/docs/dev/: helper_functions.md
zh/docs/tools/: calculator.md  datetime.md  file_ops.md  filesystem.md  think_tool.md  unit_converter.md  web_fetch_tool.md
(+36 files in other folders)
