[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolregistry-hub"
# Relying on tool.setuptools.dynamic to load `version` from `__init__.py` at build time.
dynamic = ['version']
authors = [{ name = "Oaklight", email = "oaklight@gmx.com" }]
description = "ToolRegistry Hub: A Python library providing various utility tools for mathematical calculations, date/time operations, file management, web search, unit conversions, and more - designed to support common tasks in LLM function calling and general development"
readme = "readme_en.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "ua-generator>=1.0.6",
    "beautifulsoup4>=4.13.4",
    "pydantic>=2.7.2,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "ty>=0.0.21",
    "ruff>=0.1.0",
    "python-dotenv>=1.0.1",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "pytest>=7.0.0",
]
server_core = [
    "toolregistry>=0.5.0",
    "toolregistry-server>=0.1.0",
]
server_openapi = [
    "toolregistry-hub[server_core]",
    "toolregistry-server[openapi]>=0.1.0",
]
server_mcp = [
    "toolregistry-hub[server_core]",
    "toolregistry-server[mcp]>=0.1.0",
]
server = [
    "toolregistry-hub[server_openapi]",
    "toolregistry-hub[server_mcp]",
]

[project.urls]
Documentation = "https://toolregistry.readthedocs.io"
Repository = "https://github.com/Oaklight/toolregistry-hub"
Issues = "https://github.com/Oaklight/toolregistry-hub/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"toolregistry.hub" = ["py.typed"]
"toolregistry_hub" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "toolregistry_hub.__version__" }

[project.scripts]
toolregistry-hub = "toolregistry_hub.server.cli:main"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP"]
ignore = ["UP007", "E501"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
unresolved-import = "ignore"
invalid-assignment = "ignore"
