[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolregistry-hub"
# Relying on tool.setuptools.dynamic to load `version` from `__init__.py` at build time.
dynamic = ['version']
authors = [{ name = "Oaklight", email = "oaklight@gmx.com" }]
description = "ToolRegistry Hub: Ready-to-Use Tool Collection for LLM Agents — web search, file ops, code execution, and more"
readme = "README_en.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "llm",
    "tool-calling",
    "function-calling",
    "ai-agents",
    "mcp",
    "mcp-tools",
    "openapi",
    "agentic-ai",
    "web-search",
    "file-operations",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ty>=0.0.21",
    "ruff>=0.1.0",
    "complexipy>=5.2.0",
    "python-dotenv>=1.0.1",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "pytest>=7.0.0",
]
reader = [
    "pypdf>=4.0.0",
]
reader_image = [
    "Pillow>=10.0.0",
]
reader_plus = [
    "pdfplumber>=0.10.0",
]
server_core = [
    "toolregistry-server>=0.3.2",
]
server_openapi = [
    "toolregistry-hub[server_core]",
    "toolregistry-server[openapi]>=0.3.2",
]
server_mcp = [
    "toolregistry-hub[server_core]",
    "toolregistry-server[mcp]>=0.3.2",
]
server = [
    "toolregistry-hub[server_openapi]",
    "toolregistry-hub[server_mcp]",
]

[project.urls]
Documentation = "https://toolregistry.readthedocs.io"
Repository = "https://github.com/Oaklight/toolregistry-hub"
Issues = "https://github.com/Oaklight/toolregistry-hub/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"toolregistry.hub" = ["py.typed"]
"toolregistry_hub" = ["py.typed", "data/*.yaml"]

[tool.setuptools.dynamic]
version = { attr = "toolregistry_hub.__version__" }

[project.scripts]
toolregistry-hub = "toolregistry_hub.server.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["src/toolregistry_hub/_vendor"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["src", "tests"]
exclude = ["src/toolregistry_hub/_vendor"]

[tool.ty.rules]
unresolved-import = "ignore"
invalid-assignment = "ignore"
unresolved-attribute = "warn"

[tool.complexipy]
paths = ["src/toolregistry_hub"]
max-complexity-allowed = 20
exclude = ["_vendor"]
